# Kube-Mind

./: .gitignore  GEMINI.md  Kube-Mind.sln  README.md  gcp-setup.md
.cursor/rules/: dotnet-architecture.mdc  dotnet-performance.mdc  dotnet-tests.mdc  go-architecture.mdc  go-performance.mdc  go-tests.mdc
.gemini/: instructions.md
.gemini/commands/: go.md
brain/: Dockerfile  KubeMind.Brain.slnx
brain-python/: .env.example  .gitignore  Makefile  pyproject.toml
brain-python/prompts/: sop.j2
brain-python/proto/: incident.proto
brain-python/scripts/: generate_proto.sh
brain-python/src/: __init__.py  config.py  grpc_server.py  http_server.py  main.py  utils.py
brain-python/src/graph/: __init__.py  graph.py  nodes.py  state.py
brain-python/src/observability/: __init__.py  logging_config.py  tracing.py
brain-python/src/services/: __init__.py  deduplication.py  enrichment.py  event_bus.py  github_service.py  memory_consolidation.py  slack_service.py
brain-python/src/tools/: __init__.py  diagnostics_tool.py  gitops_tool.py  kubernetes_tool.py  polycheck_tool.py
brain-python/static/: index.html
brain-python/tests/: conftest.py
brain-python/tests/integration/: test_end_to_end.py  test_grpc_server.py
brain-python/tests/unit/: test_config.py  test_deduplication.py  test_enrichment.py  test_graph.py  test_logging.py  test_tools.py
brain/.devcontainer/: Dockerfile  (+1 more)
docs/: CONTRIBUTING.md  controller-prd.md  langgraph-migration-prd.md  orchestrator-prd.md  system-overview-prd.md
observer/: AGENTS.md  Dockerfile  Makefile  PROJECT  README.md  go.mod  go.sum
proto/: incident.proto
scripts/: generate-proto.sh
(+105 files in other folders)
